tests/negative/neg_pr113_incomplete_constraints.safe
package neg_pr113_incomplete_constraints
   type packet (active : boolean = true, kind : character = 'A', count : integer = 0) is
      record
         value : integer;

   p : packet (true, 'A') = (value = 1);

